# fer_realtime

./: .env.example  .gitignore  README.md  app.py  assesment.md  config.json  flake.nix  ollama_client.py  ollama_prompt.txt  pyproject.toml  pyrightconfig.json  settings.py
.cursor/rules/: general.mdc
.direnv/: flake-profile-2-link
colab/: workshopFAF.ipynb
